k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-album
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        gke-gcsfuse/volumes: "true"
    spec:
      serviceAccountName: photo-album
      automountServiceAccountToken: false
      containers:
      - name: photo-album
        image: photo-album:SET_BY_CI
        imagePullPolicy: Always
        ports:
        - name: app
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: app
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: app
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        workingDir: /app
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
            ephemeral-storage: 100Mi
          limits:
            memory: 256Mi
            ephemeral-storage: 100Mi
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          - mountPath: /assets
            name: assets-volume
      restartPolicy: Always
      nodeSelector:
        cloud.google.com/compute-class: "photo-album-autopilot"
      terminationGracePeriodSeconds: 25
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: assets-volume
          csi:
            driver: gcsfuse.csi.storage.gke.io
            readOnly: true
            volumeAttributes:
              bucketName: $BUCKET_NAME
              mountOptions: "implicit-dirs"
              gcsfuseLoggingSeverity: warning
