k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photo-album
spec:
  type: NodePort
  selector:
    app: photo-album
  ports:
  - port: 8000
    name: app
