k8s/ingress.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: photo-album
spec:
  parentRefs:
  - kind: Gateway
    name: shared-gateway
    namespace: ingress
  hostnames:
  - photos.alexos.dev
  rules:
  - backendRefs:
    - name: photo-album
      port: 8000
